--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
+black = "^25.1.0"
 
 [project.urls]
 homepage = "https://github.com/mitkonikov/ff"
@@ -34,3 +35,6 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
+
+[tool.black]
+line-length = 100
