--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "torch (>=2.6.0,<3.0.0)",
-    "torchvision (>=0.21.0,<0.22.0)"
+    "torchvision (>=0.21.0,<0.22.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
 ]
 dynamic = [ "classifiers" ]
 
@@ -20,8 +21,10 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.4"
+mypy = "^1.15.0"
 black = "^25.1.0"
+pytest = "^8.3.4"
+types-tqdm = "^4.67.0.20241221"
 
 [project.urls]
 homepage = "https://github.com/mitkonikov/ff"
