--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,9 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install Twine
+        run: python -m pip install --upgrade twine
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
