--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,6 +116,8 @@ jobs:
 
       - name: Test Minimal Examples
         run: |
+          set -e
+
           export PATH="~/.local/bin:$PATH"
           mkdir ./models
 
